[backend] Update notifications
