# docs/swagger.json
@@ -1111,7 +1111,7 @@
                 }
             }
         },
-        "/api/v1/things/notification": {
+        "/api/v1/things/notifications": {
             "post": {
                 "security": [
                     {
@@ -1161,7 +1161,46 @@
                 }
             }
         },
-        "/api/v1/things/notification/{thingId}": {
+        "/api/v1/things/notifications/expired": {
+            "get": {
+                "security": [
+                    {
+                        "APIKey": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Notifications"
+                ],
+                "summary": "Get expired thing notifications",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ThingNotificationsExtResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/things/notifications/{thingId}": {
             "get": {
                 "security": [
                     {
@@ -1920,6 +1959,32 @@
                 }
             }
         },
+        "dto.ThingNotificationExtResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "notification_date": {
+                    "type": "string"
+                },
+                "place_id": {
+                    "type": "integer"
+                },
+                "place_title": {
+                    "type": "string"
+                },
+                "thing_id": {
+                    "type": "integer"
+                },
+                "thing_title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.ThingNotificationResponse": {
             "type": "object",
             "properties": {
@@ -1934,6 +1999,17 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.ThingNotificationsExtResponse": {
+            "type": "object",
+            "properties": {
+                "notifications": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ThingNotificationExtResponse"
+                    }
                 }
             }
         },
