# internal/dto/notification.go
@@ -15,3 +15,17 @@ type ThingNotificationResponse struct {
 	CreatedAt        string `json:"created_at"`
 	UpdatedAt        string `json:"updated_at"`
 }
+
+type ThingNotificationsExtResponse struct {
+	Notifications []ThingNotificationExtResponse `json:"notifications"`
+}
+
+type ThingNotificationExtResponse struct {
+	ThingID          int    `json:"thing_id"`
+	PlaceID          int    `json:"place_id"`
+	ThingTitle       string `json:"thing_title"`
+	PlaceTitle       string `json:"place_title"`
+	NotificationDate string `json:"notification_date"`
+	CreatedAt        string `json:"created_at"`
+	UpdatedAt        string `json:"updated_at"`
+}
